<resources>
    <!-- App Title -->
    <string name="app_name" translatable="false">Restaurant Ice Cream</string>

    <!-- List For Navigation Drawer -->
    <string name="drawer_home_pelayan">Pelayan</string>

    <!-- Toolbar actions -->
    <string name="action_set_url">Set Url</string>

    <!-- Loading and Error Message -->
    <string name="server_unreachable">Oops! Something went wrong.\nPlease check your internet connection.</string>
    <string name="try_again">Try Again?</string>
    <string name="loading">Loading&#8230;</string>

    <!-- Backup Activity -->

    <!-- About Dialog -->
    <string name="drawer_home">Home</string>
    <string name="base_url">restaurant_ice_cream</string>
    <string name="action_send">Send</string>
    <string name="action_delete">Delete</string>

    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string name="message_denied">Permission \"%1$s\" has been denied.</string>
    <string name="type_search">Ex: Keyword</string>
    <string name="drawer_home_kasir">Kasir</string>
    <string name="drawer_home_pelanggan">Pelanggan</string>
    <string name="upload_document_permission"><![CDATA[Kamu harus unggah gambar %s. Aktifkan izin (permission) WRITE_EXTERNAL_STORAGE dan CAMERA di [Setting] > [Permission]]]></string>
    <string name="pick_source">Pick Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="keterangan_mode">--- Masuk Sebagai ---</string>
    <string name="mode_pelanggan">Pelanggan</string>
    <string name="mode_pelayan">Pelayan</string>
    <string name="mode_kasir">Kasir</string>
    <string name="master_password_failed">Password Salah</string>
    <string name="drawer_home_exit">Keluar</string>
    <string name="menu">Menu</string>
    <string name="pesanan">Pesanan</string>
    <string name="pesan_baru">Pesan Baru</string>
    <string name="teruskan">Teruskan</string>
    <string name="menu_makanan">Menu Makanan</string>
    <string name="pesanan_pelanggan">Pesanan Pelanggan</string>


</resources>