<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/drawer_home"
            android:checkable="true"
            android:title="@string/drawer_home" />

        <item
            android:id="@+id/drawer_home_pelanggan"
            android:checkable="true"
            android:title="@string/drawer_home_pelanggan" />

        <item
            android:id="@+id/drawer_home_pelayan"
            android:checkable="true"
            android:title="@string/drawer_home_pelayan" />


        <item
            android:id="@+id/drawer_home_kasir"
            android:checkable="true"
            android:title="@string/drawer_home_kasir" />

        <item
            android:id="@+id/drawer_home_exit"
            android:checkable="true"
            android:title="@string/drawer_home_exit" />

    </group>


</menu>

